readability fixes

--- a/style.css
+++ b/style.css
@@ -187,9 +187,10 @@ h4 {
     text-decoration-color: transparent;
     margin-left: calc(4px + 0.5rem);
     border-radius: 2px;
-    text-shadow: 0px 0px 1px rgba(0, 0, 0, 0.5);
+    text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
     margin-top: 8px;
     z-index: 2;
+    position: relative;
     font-size: 0.5rem;
 }
 
